WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21008
getting pixels by index from CanvasPixelArray is unnecessarily slow
https://bugs.webkit.org/show_bug.cgi?id=21008
Summary
getting pixels by index from CanvasPixelArray is unnecessarily slow
Darin Adler
Reported
2008-09-22 15:01:56 PDT
Oliver noticed that when we index into a CanvasPixelArray, we convert the index to a string and put it into the identifier table each time. The identifier is then ignored by the CanvasPixelArray::indexGetter function. This extra work is bad!
Attachments
patch, already reviewed (for Oliver)
(15.04 KB, patch)
2008-09-22 15:11 PDT
,
Darin Adler
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2008-09-22 15:11:24 PDT
Created
attachment 23674
[details]
patch, already reviewed (for Oliver)
Oliver Hunt
Comment 2
2008-09-23 00:41:55 PDT
Comment on
attachment 23674
[details]
patch, already reviewed (for Oliver) Removed the toStrictUInt32 as that broke compat with ffx3
Oliver Hunt
Comment 3
2008-09-23 00:42:13 PDT
Landed
r36801
Oliver Hunt
Comment 4
2008-09-23 03:04:31 PDT
Whoops, missed afile A WebCore/bindings/js/JSCanvasPixelArrayCustom.h Committed
r36803
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug